# o2cl

./: README.md
bashcomplete/: Makefile  tibashcomplete  tibashcomplete_base.cpp
bashcomplete/.tmp/DEBIAN/: control
elysium/: .sysobj.ti
elysium/data/css/: bootstrap.min.css  portal.css
elysium/etc/: postinst.sh  postrm.sh
elysium/src/: make.cpp
node/: .sysobj.ti  CMakeLists.txt
node/etc/: postinst.sh  postrm.sh
node/src/: class.cpp  is.cpp  isnot.cpp
o2cl/: .sysobj.ti  CMakeLists.txt  o2cl-amd64.deb
o2cl/src/: main.cpp
proj/: .sysobj.ti
proj/data/: CMakeLists.txt  main.cpp
proj/etc/: postinst.sh  postrm.sh
proj/etc/lib/: control  postinst  rules
proj/src/: build.sh  dbuild  make.sh
proj/src/new/: app.sh  lib.sh  ticlass.sh
remote/: .sysobj.ti  CMakeLists.txt
remote/src/: default.sh  enter  mount  push.sh  use
remote/syntax/: push.ti
repository/: .sysobj.ti  CMakeLists.txt
repository/etc/: distributions  postinst.sh  postrm.sh
repository/src/: add  default.sh  gen  info.sh  ls  new.sh  rm  use
repository/src/gpg/: gen  ls.sh  use
stereo/: .sysobj.ti
stereo/data/: sysobj.ti
stereo/etc/: postinst.sh  postrm.sh
stereo/src/: calibrate.cpp  capture.cpp  focus.cpp  focus.h  new.sh
tibot/: .sysobj.ti
tibot/etc/: postinst.sh  postrm.sh
tibot/modules/camera/: .sysobj.ti
tibot/modules/camera-stereo/: CMakeLists.txt
tibot/modules/keypoints/: .sysobj.ti  (+1 more)
tibot/src/: add.sh  addmod.sh  init.sh  new.sh  run.cpp  server.cpp
tiobj/: .sysobj.ti
tiobj/etc/: postinst.sh  postrm.sh
tiobj/src/: get.cpp  replace.cpp  set.cpp
(+8 files in other folders)
