cmake_minimum_required (VERSION 2.6)
project ("repository")
set(CMAKE_BUILD_TYPE RELEASE)


INSTALL(PROGRAMS src/add DESTINATION bin)
INSTALL(PROGRAMS src/gen DESTINATION bin)
INSTALL(PROGRAMS src/info DESTINATION bin)
INSTALL(PROGRAMS src/ls DESTINATION bin)
INSTALL(PROGRAMS src/new DESTINATION bin)
INSTALL(PROGRAMS src/rm DESTINATION bin)
INSTALL(PROGRAMS src/default DESTINATION bin)
INSTALL(PROGRAMS src/use DESTINATION bin)
INSTALL(PROGRAMS src/gpg/gen DESTINATION bin/gpg)
INSTALL(PROGRAMS src/gpg/ls DESTINATION bin/gpg)
INSTALL(PROGRAMS src/gpg/use DESTINATION bin/gpg)
